@@ -1271,7 +1271,7 @@ const char *flagtostr(int flag)
 	case BACKUP_FILE:
 	    return N_("Backup files");
 	case MULTIBUFFER:
-	    return N_("Multiple file buffers");
+	    return N_("Reading file into separate buffer");
 	case USE_MOUSE:
 	    return N_("Mouse support");
 	case NO_CONVERT:
